Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Peter McCluskey (May 22, 2003)
  - add Italian support from Gabriele Bartolini and Marco Nenciarini.

 Peter McCluskey (May 16, 2003)
  - Fixed initialization of prior_subdir when dirs created out of
   order. That fixes a case where a subdir wasn't in index files with
   reverse_folders = 1.

 Jose Kahan (May 13, 2003)
   - Add the WAI enhancements proposed in 
     http://www.w3.org/2002/03/archives-improvements/. 
     As a consequence of this change, the sethr and usetable configuration
     options are deprecated. The new markup takes into account the changes
     that those options proposed and offers them in a WAI friendly way.
     Some code cleaning needs yet to be done to remove all the cases
     where those rules were used. Previous code version is tagged as
     "before-wai".
     Fixed some invalid XHTML markup too.

 Peter McCluskey (May 12, 2003)
   - fix txtsuffix to not crash on null pointer.
   - fix discard_dup_msgids to work when showprogress = 0.

 Peter McCluskey (April 24, 2003)
   - spam encoding from Peter Karlsson. Currently enabled via the
     spamprotect option.

 Jose Kahan (Apr 23, 2003)
   - As a consequence of the XHTML convertion, unconvchars() wasn't
     storing information into the buffer when there were no entities.

 Jose Kahan (Apr 10, 2003)
   - Converted hypermail to XHTML. The only remaining issue concerns
     charsets. Some mail clients don't specify a correct charset or
     specify a charset and include characters belonging to other
     charset spaces. The solution to detect and convert the
     foreign charset into a Unicode entity or, for the adventurous
     hacker, convert hypermail's output to UTF-8. For the moment, only
     the former is implemented partially;  there is only one a winlatin1
     (Windows CP 1252) to Unicode convertion/detection being done.
     See string.c:convchars, unconvwinlatin1, and uconvert.h for more 
     details.